test/Fail/Issue1015OnlyRecord.err
Issue1015OnlyRecord.agda:14.1-16: error: [ComatchingDisabledForRecord]
Copattern matching is disabled for record R
when checking the clause left hand side
force (inh i) j
